--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -3,6 +3,8 @@
 \usepackage{textcomp}
 \usepackage{xcolor}
 \usepackage{algorithm2e}
+\usepackage[dvips]{graphicx}
+\graphicspath{{pictures/}}
 
 \begin{document}
 
@@ -12,8 +14,8 @@
 \rustitle{Обзор методов и алгоритмов \newline по решению задачи разрешения лексической многозначности}
 \engtitle{Word-sense disambiguation methods and algorithms review}
 
-\rusauthor{С.~С.~Ткач, Е.~А.~Ярышкина, А.~Н.~Кириллов, И.~А.~Сихонина, Н.~И.~Коржицкий, А.~М.~Спирикова, А.~Л.~Чухарев, Т.~В.~Каушинис, А.~А.~Крижановский, Д.~С.~Шорец, Д.~Ю.~Янкевич}
-\engauthor{S.~S.~Tkach, E.~A.~Yaryshkina, A.~N.~Kirillov, I.~A.~Sikhonina, N.~I.~Korzhitsky, A.~M.~Spirikova, A.~L.~Chuharev, T.~V.~Kaushinis, A.~A.~Krizhanovsky, D.~S.~Shorets, D.~Y.~Yankevich}
+\rusauthor{Т.~В.~Каушинис,  А.~Н.~Кириллов,  Н.~И.~Коржицкий, А.~А.~Крижановский,   И.~А.~Сихонина,  А.~М.~Спиркова, С.~С.~Ткач,  В.~Г.~Старкова, А.~Л.~Чухарев,  Д.~С.~Шорец,  Д.~Ю.~Янкевич , Е.~А.~Ярышкина}
+\engauthor{T.~V.~Kaushinis, A.~N.~Kirillov, N.~I.~Korzhitsky, A.~A.~Krizhanovsky, I.~A.~Sikhonina, A.~M.~Spirkova, S.~S.~Tkach, V.~G.~Starkova, A.~L.~Chuharev, D.~S.~Shorets, D.~Y.~Yankevich, E.~A.~Yaryshkina}
 
 
 \organization{Институт прикладных математических исследований Карельского научного центра РАН}
@@ -21,19 +23,50 @@
 \rusabstract{В статье дается краткий обзор методов и алгоритмов по решению задачи разрешения лексической многозначности.}
 \engabstract{This paper gives a brief overview of word-sense disambiguation methods and algorithms.}
 
-\ruskeywords{труды, шаблон, подготовка статьи.}
-\engkeywords{transactions, template, article.}
+\ruskeywords{алгоритм, метод, разрешение лексической многозначности.}
+\engkeywords{algorithm, method, word-sense disambiguation.}
 
 \maketitle
 
 \begin{articletext}
+\section{Аннотация}
+Разрешение лексической многозначности --- это задача выбора между разными значениями слов и словосочетаний в словаре в зависимости от контекста. В статье представлен краткий обзор методов и алгоритмов разрешения лексической многозначности. Представлены (1) методы, основанные на машинном обучении, (2) методы, не использующие никаких размеченных корпусов для различения значений слов, и (3) методы, использующие внешние словарные источники информации (машиночитаемые словари, тезаурусы, онтологии).
+
+<<Статья распространяется на правах свободной лицензии “CC Attribution”.>>
+
 \section{Введение}
-В статье представлен обзор методов и алгоритмов разрешения лексической многозначности (word-sense disambiguation или WSD). Верный выбор одного из значений многозначного слова для данного контекста, фразы, предложения и является результатом решения WSD-задачи.
+В статье представлен обзор методов и алгоритмов разрешения лексической многозначности (word-sense disambiguation или WSD). Верный выбор в словаре одного из значений многозначного слова или фразы в зависимости от контекста и является успешным результатом решения WSD-задачи.
 
-Именно многозначность слов, их неоднозначность и зависимость значений слов от контекста являются причиной возникновения такой задачи и одновременно обуславливает сложность её решения. Уверенное решение WSD-задачи необходимо для точного машинного перевода и, на наш взгляд, является предтечей искусственного интеллекта.
+Приведём несколько примеров употребления слова <<коса>> и <<косой>>, найденных с помощью Национального корпуса русского языка (http://ruscorpora.ru) по запросу <<коса>>:
 
-Для этой задачи известно большое количество алгоритмов и методов решения, которые можно разделить на три группы: (1) WSD-методы с учителем; (2) WSD-методы без учителя и (3) WSD-методы на основе знаний. Далее в этом порядке и будут представлены методы и алгоритмы разрешения лексической многозначности.
+\begin{enumerate}
+\item Поп сам в первой \textit{\underline{косе}} идет, но прихожане не торопятся, смотрят на солнышко и часа через полтора уже намекают, что обедать пора. [М. Е. Салтыков-Щедрин. Мелочи жизни (1886-1887)]
+\item Но работа даже и после этого идет всё вялее и вялее; некоторые и \textit{\underline{косы}} побросали. [М. Е. Салтыков-Щедрин. Мелочи жизни (1886-1887)]
+\item В особенности жестоко было крепостное право относительно дворовых людей: даже волосы крепостных девок эксплуатировали, продавая их \textit{\underline{косы}} 
+\item Это одинокая скала, соединяющаяся с материком намывной \textit{\underline{косой}} из песка и гальки. [В. К. Арсеньев, «По Уссурийскому краю», 1917 г.]
+\item Первая черепашка подскочила к гвардейцу и воткнула ему в спину сверкающий \textit{\underline{косой}} меч. [Виктор Пелевин. S.N.U.F.F, 2011]
+\end{enumerate}
 
+Первые четыре примера дают три разных значения существительного <<коса>>: ряд косарей, сельскохозяйственное орудие, заплетенные волосы, протяжённая речная отмель. Последний пример содержит прилагательное <<косой>>, совпадающее с одной из форм существительного <<коса>>. Все эти значения и часть речи читатель легко определяет по контексту. 
+
+Именно многозначность слов, их неоднозначность и зависимость значений слов от контекста являются причиной возникновения такой задачи и одновременно обуславливает сложность её решения. Уверенное решение WSD-задачи необходимо во многих задачах, связанных с автоматической обработкой текста (информационный поиск, машинный перевод и т.п.) и, на наш взгляд, является предтечей искусственного интеллекта.
+
+Для этой задачи известно большое количество алгоритмов и методов решения, которые можно разделить на \cite{Lukash 2011}, \cite{Navigli 2009}: 
+
+\begin{itemize}
+\item WSD-методы с учителем (\textit{supervised WSD}) --- методы, базирующиеся на машинном обучении и работающие на размеченных корпусах текстов; 
+\item WSD-методы без учителя (\textit{unsupervised WSD}), не использующие никаких размеченных корпусов для различения значений слов.
+\end{itemize}
+
+Другая классификация методов строится на противопоставлении используемых ресурсов \cite{Navigli 2009}:
+\begin{itemize}
+\item WSD-методы, основанные на знаниях (\textit{knowledge-based}); в этих методах используются внешние словарные источники информации (машиночитаемые словари, тезаурусы, онтологии);
+\item WSD-методы, основанные на корпусах текстов (\textit{corpus-based}).
+\end{itemize}
+
+Также применяются комбинации этих методов.
+
+Далее будут представлены примеры методов и алгоритмов разрешения лексической многозначности (1) с использованием машинного обучения, (2) без машинного обучения и (3) методы, основанные на знаниях. Данная статья является <<введением>> в проблематику WSD, поскольку эта тема является чрезвычайно обширной и существуют сотни интересных работ по каждому из указанных направлений.
 
 \bfullwidth
 \begin{center}
@@ -132,28 +165,13 @@ total & 2368\\
 
 \parindent=0,5cm
 
-Настоящий текст является рефератом статьи \cite{VERONIS 
-1990}, в которой описан метод автоматического построения очень больших нейронных сетей (VLNN) с помощью текстов, извлекаемых из машинно-читаемых словарей (MRD), и рассмотрено использование этих сетей в задачах разрешения лексической неоднозначности (WSD). 
+Использование нейронных сетей (NN)  для WSD  было предложено в работах \cite{COTTRELL 1983,WALTZ 1985}. В типичной NN на вход   подается   слово, смысл которого требуется установить, т.е. целевое (\textit{target}) слово, а также --- контекст (фраза) его содержащий. Узлы выхода соответствуют различным смыслам слова. В процессе обучения, когда смысл тренировочного целевого слова известен, веса связующих узлы соединений (связей), настраиваются таким образом, чтобы по окончании обучения выходной узел, соответствующий истинному смыслу целевого слова, имел наибольшую активность. Веса соединений могут быть  положительными или отрицательными, и настраиваются посредством рекуррентных алгоритмов (алгоритм обратного распространения ошибки,  рекуррентный метод наименьших квадратов и т.д.). Сеть может содержать скрытые (hidden) слои, состоящие из узлов, соединенных как прямыми, так и обратными связями. Для представления входной информации обычно используется одна из двух схем:  распределенная (distributed) или локалистская (localist ) (\cite{Hinton 1986}, \cite{COTTRELL 1989}, \cite{Azzini}). 
 
-\parindent=0,5cm
+В работе \cite{VERONIS 1990} описан метод автоматического построения \textbf{\textit{очень больших нейронных сетей}} (VLNN) с помощью текстов, извлекаемых из машинно-читаемых словарей (MRD), и рассмотрено использование этих сетей в задачах разрешения лексической неоднозначности (WSD). Поясним основную идею VLNN.  Широко известен метод Леска \cite{LESK 1986}  использования  информации  из MRD для  задачи  WSD.  Суть этого метода состоит в вычислении  так называемой \textit{степени пересечения}, т.е.  количества общих слов в словарных определениях слов из контекста (<<окна>>) условного размера, содержащего целевое слово. Основной недостаток метода Леска --- зависимость  от  словарной  статьи, т.е. от слов, входящих в нее. Стратегия преодоления  этого  недостатка --- использование словарных статей, определяющих слова, входящие в другие словарные статьи, начиная со словарных статей, соответствующих  словам  из  контекста. Таким образом, образуются  достаточно  длинные   пути  из слов, входящих в словарные статьи. Эта  идея  лежит  в  основе  топологии VLNN. В работе \cite{VERONIS 1990}  для построения  VLNN использован  словарь  Collins  English  Dictionary.
 
-В дальнейшем будем называть слова, смысл которых требуется установить целевыми словами. 
+\textbf{Топология сети.} Целевое слово представлено  узлом, соединенным активирующими  связями со смысловыми узлами, представляющими все возможные смыслы слова, имеющиеся  в словарных статьях. Каждый смысловой узел, в свою очередь, соединен  активирующими  связями с узлами, представляющими  слова в словарной статье, соответствующей толкованию данного смысла. Процесс соединения повторяется многократно, создавая сверхбольшую сеть взаимосвязанных узлов. В идеале сеть может содержать весь словарь. Авторы, по практическим соображениям, ограничиваются несколькими тысячами узлов и 10–20 тысячами соединений. Слова представлены своими леммами (каноническими формами). Узлы, представляющие различные смыслы данного слова, соединены запрещающими (inhibitory) связями.  
 
-\parindent=0,5cm
-
-Широко известен метод Леска \cite{LESK 1986}  использования  информации  из MRD для  задачи  WSD.  Суть этого метода состоит в вычислении  так называемой <<степени пересечения>>, т.е.  количества общих слов в словарных определениях слов из контекста (<<окна>>) условного размера, содержащего целевое слово. Основной недостаток метода Леска --- зависимость  от  словарной  статьи, т.е. от слов, входящих в нее. Стратегия преодоления  этого  недостатка --- использование словарных статей, определяющих слова, входящие в другие словарные статьи, начиная со словарных статей, соответствующих  словам  из  контекста. Таким образом, образуются  достаточно  длинные   пути  из слов, входящих в словарные статьи. Эта  идея  лежит в основе топологии (строения) VLNN.
-
-\parindent=0,5cm
-
-Использование нейронных сетей  для WSD  было предложено в работах \cite{COTTRELL 1983,WALTZ 1985}.   В рассматриваемой  статье для построения  VLNN использован  словарь  Collins  English  Dictionary.
-
-\parindent=0,5cm
-
-\textbf{Топология сети.} Целевое слово представлено  узлом, соединенным активирующими  связями со смысловыми узлами, представляющими все возможные смыслы слова, имеющиеся  в словарных статьях. Каждый смысловой узел, в свою очередь, соединен  активирующими  связями с узлами, представляющими  слова в словарной статье, соответствующей определению данного смысла. Процесс соединения повторяется многократно, создавая большую сеть взаимосвязанных узлов. В идеале сеть может содержать весь словарь. Авторы, по практическим соображениям, ограничиваются несколькими тысячами узлов и 10 --- 20 тысячами соединений. Слова представлены своими леммами (каноническими формами). Узлы, представляющие различные смыслы данного слова, соединены запрещающими (подавляющими) связями.
-
-\parindent=0,5cm
-
-\textbf{Алгоритм функционирования сети.} При запуске сети первыми активируются узлы входного  слова, которое кодируется согласно принятому правилу. Затем  каждый  входной узел посылает активирующий сигнал своим смысловым узлам, с которыми он соединен. В результате  сигналы распространяются по всей сети в течение определенного числа циклов. В каждом цикле узлы слова и  его смыслов получают обратные сигналы от узлов, соединенных с ними. Узлы конкурирующих смыслов посылают взаимно подавляющие сигналы.  Взаимодействие  сигналов  обратной  связи  и  подавления,  в соответствии со стратегией <<победитель получает все>>, позволяет увеличить активацию узлов-слов и соответствующих им правильных узлов-смыслов,  одновременно  уменьшая  активацию  узлов  соответствующих неправильным смыслам. После нескольких десятков  циклов сеть стабилизируется  в  состоянии, в котором активированы  только узлы-смыслы с наиболее активированными связями  с    узлами-словами. В статье  не  указан  алгоритм  настройки, т.е.  обучения  сети.  Видимо,  используется  метод  встречного  распространения (back  propagation).
+\textbf{Алгоритм.} При запуске сети первыми активируются узлы входного  слова  (согласно принятой кодировке). Затем  каждый  входной узел посылает активирующий сигнал своим смысловым узлам, с которыми он соединен. В результате  сигналы распространяются по всей сети в течение определенного числа циклов. В каждом цикле узлы слова и  его смыслов получают обратные сигналы от узлов, соединенных с ними. Узлы конкурирующих смыслов посылают взаимно подавляющие сигналы.  Взаимодействие  сигналов  обратной  связи  и  подавления,  в соответствии со стратегией <<победитель получает все>>, позволяет увеличить активацию узлов-слов и соответствующих им правильных узлов-смыслов,  одновременно  уменьшая  активацию  узлов  соответствующих неправильным смыслам. После нескольких десятков  циклов сеть стабилизируется  в  состоянии, в котором активированы  только узлы-смыслы с наиболее активированными связями  с    узлами-словами. При обучении сети  используется  метод  обратного  распространения (\textit{back  propagation}).    
 
 \section{Сравнительные эксперименты в WSD: роль предпочтений в машинном обучении}
 
@@ -216,7 +234,7 @@ product & продуктовая линия & The products or services sold by a business, or by
 
 \begin{figure}[H]
 \includegraphics[keepaspectratio=true,
- width=0.9\columnwidth]{p1.png}
+ width=0.9\columnwidth]{line_wsd_1_accuracy.png}
 \caption{Рост точности решения WSD задачи для разных алгоритмов (определение значения слова \textit{line}) при увеличении размера обучающей выборки \cite{Mooney 1996}. Алгоритмы: PFOIL-DLIST, PROIL-DNF, PFOIL-CNF, C4.5, Naive Bayes --- наивный баейсовский классификатор; Perceptron --- персептрон; 3 Nearest Neighbor --- метод 3-х ближайших соседей}
 \label{kor1}
 \end{figure}
@@ -225,7 +243,7 @@ product & продуктовая линия & The products or services sold by a business, or by
 
 \begin{figure}[H]
 \includegraphics[keepaspectratio=true,
- width=0.9\columnwidth]{p2.png}
+ width=0.9\columnwidth]{line_wsd_2_time.png}
 \caption{Зависимость времени затраченного на обучение алгоритмов от размера обучающей выборки \cite{Mooney 1996}. Алгоритмы: PFOIL-DLIST, PROIL-DNF, PFOIL-CNF, C4.5, Naive Bayes --- наивный баейсовский классификатор; Perceptron --- персептрон; 3 Nearest Neighbor --- метод 3-х ближайших соседей}
 \label{kor2}
 \end{figure}
@@ -234,7 +252,7 @@ product & продуктовая линия & The products or services sold by a business, or by
 
 \begin{figure}[H]
 \includegraphics[keepaspectratio=true,
- width=0.9\columnwidth]{p3.png}
+ width=0.9\columnwidth]{line_wsd_3_testing_time.png}
 \caption{Зависимость времени работы алгоритмов от размера обучающей выборки при определении значения слова \textit{line} \cite{Mooney 1996}. Алгоритмы: PFOIL-DLIST, PROIL-DNF, PFOIL-CNF, C4.5, Naive Bayes --- наивный баейсовский классификатор; Perceptron --- персептрон; 3 Nearest Neighbor --- метод 3-х ближайших соседей}
 \label{kor3}
 \end{figure}
@@ -249,7 +267,7 @@ product & продуктовая линия & The products or services sold by a business, or by
 \section{Различение значений слов на основе векторов свойств, расширенных словарными толкованиями}
 
 \begin{flushright}
-\textit{А. М. Спирикова} 
+\textit{А. М. Спиркова} 
 \end{flushright}
 
 Амрута Пурандаре и Тед Педерсен в 2004 году разработали <<Алгоритм различения значений на основе контекстных векторов>> (\textit{Сontext vector sense discrimination}) \cite{Purandare 2004}. В этом алгоритме 1 берется набор примеров употреблений исследуемого слова, 2 выполняется кластеризация этих примеров так, чтобы близкие по значению или связанные каким-либо образом слова объединились в одну группу \cite{Purandare 2004}.
@@ -347,7 +365,7 @@ product & продуктовая линия & The products or services sold by a business, or by
 
 Задача поиска похожих слов \textit{(similar words)} является первым шагом в определении значения слова. Тогда при обработке корпуса, включающего предложение (1), результатом должно быть определение близости значения слова \textit{Tezg\"uino} к словам \textit{<<пиво>>, <<вино>>, <<водка>>.}
 
-\textbf{Методология автоматического создания тезауруса.} Для вычисления сходства между словами в работе \cite{Dekang 1998} использован парсер \cite{Dekang 1993}, извлекающий тройки из текста. Тройки зависимостей от англ. \textit{dependency triple} (далее просто <<тройки>>) состоят из двух слов и грамматического отношения между ними. Символ $IIw, r, w'll$ означает частоту в корпусе тройки $(w, r, w')$, где $w, w'$ --- это слова в нормальной форме, $r$ --- синтаксическое отношение. Произвольное слово или отношение обозначается символом-джокером «*». Например, \textit{Ilcook, obj,} *|| означает число троек со словом \textit{cook} и отношением \textit{obj}. 
+\textbf{Методология автоматического создания тезауруса.} Для вычисления сходства между словами в работе \cite{Dekang 1998} использован парсер \cite{Dekang 1993}, извлекающий тройки из текста. Тройки зависимостей от англ. \textit{dependency triple} (далее просто <<тройки>>) состоят из двух слов и грамматического отношения между ними. Символ $||w, r, w'||$ означает частоту в корпусе тройки $(w, r, w')$, где $w, w'$ --- это слова в нормальной форме, $r$ --- синтаксическое отношение. Произвольное слово или отношение обозначается символом-джокером «*». Например, \textit{Ilcook, obj,} *|| означает число троек со словом \textit{cook} и отношением \textit{obj}. 
 
 Для примера рассмотрим предложение \textit{<<У меня есть коричневая собака>>.} Из него извлечем следующие тройки:
 
@@ -366,11 +384,11 @@ product & продуктовая линия & The products or services sold by a business, or by
 
 Предположив, что частоты троек не зависят друг от друга, получаем, что информация, представленная в описание слова $w$, равна сумме информации по каждой из уникальных троек в описании слова $w$. 
 
-Для измерения информации в утверждении \textit{\textbf{IIw, r, w'll=с}} выполним следующее:
+Для измерения информации в утверждении \textit{\textbf{||w, r, w'||=с}} выполним следующее:
 
 \begin{enumerate}
-\item измерим количество информации в утверждении, что произвольная тройка, извлеченная из текста, будет наша тройка \textit{\textbf{(w, r, w')}} при условии, что значение \textit{\textbf{IIw, r, w'll}} --- не известно;
-\item измерим то же при условии, что значение \textit{\textbf{IIw, r, w'll}} --- известно;
+\item измерим количество информации в утверждении, что произвольная тройка, извлеченная из текста, будет наша тройка \textit{\textbf{(w, r, w')}} при условии, что значение \textit{\textbf{||w, r, w'||}} --- не известно;
+\item измерим то же при условии, что значение \textit{\textbf{||w, r, w'||}} --- известно;
 \item разница этих двух количеств является ответом.
 \end{enumerate}
 
@@ -383,17 +401,17 @@ product & продуктовая линия & The products or services sold by a business, or by
 \textbf{C:} случайно выбранное слово - это $w'$;
 
 \begin{enumerate}
-\item Когда значение \textit{\textbf{IIw, r, w'll}} неизвестно, то предполагаем, что \textbf{А} и \textbf{С} являются условно независимыми при наличии события \textbf{В}.  Вероятность наступления сразу трех этих событий составляет \textbf{$P_{MLE}(B) P_{MLE} (A|B) P_{MLE} (C|B)$}, где \textbf{$P_{MLE}$} --- это оценка максимального правдоподобия распределения вероятностей (\textit{maximum likelihood estimation})
+\item Когда значение \textit{\textbf{||w, r, w'||}} неизвестно, то предполагаем, что \textbf{А} и \textbf{С} являются условно независимыми при наличии события \textbf{В}.  Вероятность наступления сразу трех этих событий составляет \textbf{$P_{MLE}(B) P_{MLE} (A|B) P_{MLE} (C|B)$}, где \textbf{$P_{MLE}$} --- это оценка максимального правдоподобия распределения вероятностей (\textit{maximum likelihood estimation})
 
 $P_{MLE}(B)=\frac{||*,r,*||}{||*,*,*||}$\\
 $P_{MLE}(A|B)=\frac{||w,r,*||}{||*,r,*||}$\\
 $P_{MLE}(C|B)=\frac{||*,r,w'||}{||*,r,*||}$
 
-\item Когда значение \textit{\textbf{IIw, r, w’ll}} известно, можно сразу получить $P_{MLE}(A,B,C)$:
+\item Когда значение \textit{\textbf{||w, r, w’||}} известно, можно сразу получить $P_{MLE}(A,B,C)$:
 
 $P_{MLE}(A,B,C)=\frac{||w,r,w'||}{||*,*,*||}$
 \item Пусть \textit{\textbf{I(w,r, w’)}} обозначает количество информации, содержащейся 
-в утверждении \textit{\textbf{IIw, r, w'll=с}}. Можно вычислить это значение так:
+в утверждении \textit{\textbf{||w, r, w'||=с}}. Можно вычислить это значение так:
 
 \end{enumerate}
 
@@ -632,7 +650,7 @@ Nq235 & 0.20 & покрытие, оболочка, дорога\\
 \label{yank}
 \end{table}
 
-\textbf{Сравнение с алгоритмом UNICON.} CBC является разновидностью алгоритма UNICON \cite{Lin 2001}, который также строит центроид кластера, используя небольшой набор похожих элементов.
+\textbf{Сравнение с алгоритмом UNIN.} CBC является разновидностью алгоритма UNICON \cite{Lin 2001}, который также строит центроид кластера, используя небольшой набор похожих элементов.
 \parindent=0,5cm
 
 Одним из основных различий между UNICON и CBC является то, что UNICON гарантирует, что различные комитеты не имеют одинаковых элементов, тем не менее, центры тяжести двух комитетов по-прежнему могут быть очень близкими (похожими). В~UNICON'е эта проблема решается объединением таких кластеров. В отличие от этого, на II этапе CBC создаются только те комитеты, центры тяжести которых отличны от всех ранее созданных комитетов.
@@ -674,7 +692,7 @@ Nq235 & 0.20 & покрытие, оболочка, дорога\\
 
 Например, построим SP для глагола \textit{ползать} и сеть на Рис. ~\ref{ris1} будет базой знаний.
 \begin{figure}[H]
-    \includegraphics[keepaspectratio=true,width=0.9\columnwidth]{fig_1.jpg}
+    \includegraphics[keepaspectratio=true,width=0.9\columnwidth]{bayesian_network_crocodile.jpg}
     \caption{байесовская сеть для многозначного существительного \textit{крокодил}}
     \label{ris1}
 \end{figure}
@@ -728,6 +746,12 @@ Nq235 & 0.20 & покрытие, оболочка, дорога\\
 \parindent=0,5cm
 
 Находкой работы \cite{Ciaramita 2000} является разъяснение стратегии “explaining away”, то есть отбрасывание маловероятных значений слов при построении сочетаемостных ограничений. Такая стратегия является неотъемлемым свойством байесовских сетей и байесовского вывода, полезным свойством при разрешении лексической многозначности. 
+
+\section{Заключение}
+
+Разрешение лексической многозначности - это задача выбора между разными значениями слов и словосочетаний в словаре в зависимости от контекста. Задача разрешения лексической многозначности является открытой проблемой, то есть крайне интересной и привлекательной с научной точки зрения.
+
+В статье представлен краткий обзор методов и алгоритмов разрешения лексической многозначности. Во-первых, методы, основанные на машинном обучении.  Во-вторых, методы, не использующие никаких размеченных корпусов для различения значений слов. В-третьих, методы, использующие внешние словарные источники информации (машиночитаемые словари, тезаурусы, онтологии).
  
 \begin{thebibliography}{9}
 
@@ -740,8 +764,14 @@ Nq235 & 0.20 & покрытие, оболочка, дорога\\
 \bibitem{epr:website}
 \textit{Епрев, А. С.}Применение контекстных векторов в классификации текстовых документов. 2010. http://jre.cplire.ru/iso/oct10/1/text.html
 
+\bibitem{Lukash 2011}
+\textit{Лукашевич Н.В.} Тезаурусы в задачах информационного поиска. Издательство МГУ, 2011 г. 495 с.
+
 \bibitem{Abney 1999}
 \textit{Abney, S. and Light, M.}Hiding a semantic hierarchy in a markov model. In Proceedings of the Workshop on Unsupervised Learning in Natural Language Processing, ACL. 1999.
+
+\bibitem{Azzini}
+\textit{A. Azzini, C. da Costa Pereira, M. Dragoni, and A.G.B. Tettamanzi}Evolving Neural Networks for Word Sense Disambiguation // 8-th International conference on hybrid intelligent systems. Spain. Barcelona. Pp. 332–337.
 
 \bibitem{Berry 1993}
 \textit{M. Berry, T. Do, G. O’Brien, V. Krishna, and S. Varadhan}SVDPACK (version 1.0) user’s guide. Technical Report CS-93-194, University of Tennessee at Knoxville, Computer Science Department, April 1993.
@@ -754,6 +784,9 @@ Nq235 & 0.20 & покрытие, оболочка, дорога\\
 
 \bibitem{COTTRELL 1983}
 \textit{COTTRELL, G. W. and SMALL, S. L.}A connectionist  scheme for modelling word  sense  disambiguation -- Cognition and brain theory. 1983. № 6. P. 89–120. 
+
+\bibitem{COTTRELL 1989}
+\textit{G. W. Cottrell}A connectionist approach to word sense disambiguation. Pitman, London, 1989.
 
 \bibitem{Charles 1993}
 \textit{Charles X. Ling, Marin Marinov}Answering the connectionist challenge: A symbolic model of learning the past tenses of English verbs,  Cognition, Elsevier, 1993
@@ -775,6 +808,9 @@ Nq235 & 0.20 & покрытие, оболочка, дорога\\
 
 \bibitem{Harris 1985}
 \textit{Harris, Z.}Distributional structure. In: Katz, J. J. (ed.) The Philosophy of Linguistics. New York: Oxford University Press. 1985. pp. 26–47
+
+\bibitem{Hinton 1986}
+\textit{G.E. Hinton, J.L. McClelland, D.E. Rumelhart}Distributed representations// In Parallel Processing: explorations in the microstructure of cognition. MIT Press, Cambridge, MA, 1986. Pp. 5–44.
 
 \bibitem{Jain 1988}
 \textit{Jain, A. and Dubes, R.}Algorithms for Clustering Data. Prentice-Hall, Inc., Upper Saddle River, NJ, 1988.
@@ -803,6 +839,9 @@ An Illustration of the Role of Bias in Machine Learning, Department of Computer 
 
 \bibitem{Mooney 1995}
 \textit{R. J. Mooney, M. E. Califf}Induction of First-Order Decision Lists: Results on Learning the Past Tense of English Verbs, Department of Computer Sceinces, University of Texas, Austin, TX 78712-1188, 1995
+
+\bibitem{Navigli 2009}
+\textit{Navigli R.}Word sense disambiguation: A survey. ACM Computing Surveys (CSUR) 41, no. 2 (2009): 10.
 
 \bibitem{Pantel 2002}
 \textit{Patrick Pantel, Dekang Lin}Discovering Word Senses from Text. University of Alberta. Department of Computing Science Edmonton, Alberta T6H 2E1 Canada, 2002.
@@ -940,7 +979,7 @@ annspirkova@gmail.com
 
 \columnbreak
 
-\authorsname{Spirikova, Anna}
+\authorsname{Spirkova, Anna}
 Student\\
 Faculty of Mathematics\\
 Petrozavodsk State University\\
@@ -967,6 +1006,24 @@ Petrozavodsk State University\\
 Prospect Lenina, 33, Petrozavodsk, Republic of Karelia\\
 tel.: +7 (8142) 71-10-78\\
 tkachkras@gmail.com 
+\end{aboutauthors}
+
+\begin{aboutauthors}
+\authorsname{Старкова Валентина Геннадьевна}
+старший инженер-программист\\ 
+Институт прикладных математических исследований КарНЦ РАН\\ 
+ул. Пушкинская, 11, Петрозаводск, Республика Карелия, Россия, 185910\\
+тел.: (8142) 766312\\
+stark\_val@mail.ru
+
+\columnbreak
+
+\authorsname{Starkova, Valentina}
+Senior Programming Engineer\\
+Institute of Applied Mathematical Research, Karelian Research Centre, Russian Academy of Science\\
+11 Pushkinskaya St., 185910 Petrozavodsk, Karelia, Russia\\
+tel.: (8142) 766312\\
+stark\_val@mail.ru 
 \end{aboutauthors}
 
 \begin{aboutauthors}
