--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -8,19 +8,21 @@
 
 \begin{document}
 
-\procname{Труды Карельского научного центра РАН\\ \No 0. 2010. С.~1--4}
+\procname{Труды Карельского научного центра РАН\\ \No 0. 2015. С.~1--4}
 \udk{УДК 004.01:006.72 (470.22)}
 
-\rustitle{Обзор методов и алгоритмов \newline по решению задачи разрешения лексической многозначности}
+\rustitle{Обзор методов и алгоритмов разрешения \newline лексической многозначности}
 \engtitle{Word-sense disambiguation methods and algorithms review}
 
-\rusauthor{Т.~В.~Каушинис,  А.~Н.~Кириллов,  Н.~И.~Коржицкий, А.~А.~Крижановский,   И.~А.~Сихонина,  А.~М.~Спиркова, С.~С.~Ткач,  В.~Г.~Старкова, А.~Л.~Чухарев,  Д.~С.~Шорец,  Д.~Ю.~Янкевич , Е.~А.~Ярышкина}
-\engauthor{T.~V.~Kaushinis, A.~N.~Kirillov, N.~I.~Korzhitsky, A.~A.~Krizhanovsky, I.~A.~Sikhonina, A.~M.~Spirkova, S.~S.~Tkach, V.~G.~Starkova, A.~L.~Chuharev, D.~S.~Shorets, D.~Y.~Yankevich, E.~A.~Yaryshkina}
+\rusauthor{Т.~В.~Каушинис,  А.~Н.~Кириллов,  Н.~И.~Коржицкий, А.~А.~Крижановский,   И.~А.~Сихонина,  А.~М.~Спиркова, В.~Г.~Старкова, С.~С.~Ткач,  А.~Л.~Чухарев,  Д.~С.~Шорец,  Д.~Ю.~Янкевич , Е.~А.~Ярышкина}
+\engauthor{T.~V.~Kaushinis, A.~N.~Kirillov, N.~I.~Korzhitsky, A.~A.~Krizhanovsky, I.~A.~Sikhonina, A.~M.~Spirkova, V.~G.~Starkova, S.~S.~Tkach,  A.~L.~Chuharev, D.~S.~Shorets, D.~Y.~Yankevich, E.~A.~Yaryshkina}
 
 
 \organization{Институт прикладных математических исследований Карельского научного центра РАН}
 
-\rusabstract{В статье дается краткий обзор методов и алгоритмов по решению задачи разрешения лексической многозначности.}
+\rusabstract{Разрешение лексической многозначности --- это задача выбора между разными значениями слов и словосочетаний в словаре в зависимости от контекста. В статье представлен краткий обзор методов и алгоритмов разрешения лексической многозначности. Представлены (1) методы, основанные на машинном обучении, (2) методы, не использующие никаких размеченных корпусов для различения значений слов, и (3) методы, использующие внешние словарные источники информации (машиночитаемые словари, тезаурусы, онтологии). 
+
+Статья распространяется на правах свободной лицензии “CC Attribution”.}
 \engabstract{This paper gives a brief overview of word-sense disambiguation methods and algorithms.}
 
 \ruskeywords{алгоритм, метод, разрешение лексической многозначности.}
@@ -29,10 +31,6 @@
 \maketitle
 
 \begin{articletext}
-\section{Аннотация}
-Разрешение лексической многозначности --- это задача выбора между разными значениями слов и словосочетаний в словаре в зависимости от контекста. В статье представлен краткий обзор методов и алгоритмов разрешения лексической многозначности. Представлены (1) методы, основанные на машинном обучении, (2) методы, не использующие никаких размеченных корпусов для различения значений слов, и (3) методы, использующие внешние словарные источники информации (машиночитаемые словари, тезаурусы, онтологии).
-
-<<Статья распространяется на правах свободной лицензии “CC Attribution”.>>
 
 \section{Введение}
 В статье представлен обзор методов и алгоритмов разрешения лексической многозначности (word-sense disambiguation или WSD). Верный выбор в словаре одного из значений многозначного слова или фразы в зависимости от контекста и является успешным результатом решения WSD-задачи.
@@ -40,11 +38,11 @@
 Приведём несколько примеров употребления слова <<коса>> и <<косой>>, найденных с помощью Национального корпуса русского языка (http://ruscorpora.ru) по запросу <<коса>>:
 
 \begin{enumerate}
-\item Поп сам в первой \textit{\underline{косе}} идет, но прихожане не торопятся, смотрят на солнышко и часа через полтора уже намекают, что обедать пора. [М. Е. Салтыков-Щедрин. Мелочи жизни (1886-1887)]
-\item Но работа даже и после этого идет всё вялее и вялее; некоторые и \textit{\underline{косы}} побросали. [М. Е. Салтыков-Щедрин. Мелочи жизни (1886-1887)]
-\item В особенности жестоко было крепостное право относительно дворовых людей: даже волосы крепостных девок эксплуатировали, продавая их \textit{\underline{косы}} 
-\item Это одинокая скала, соединяющаяся с материком намывной \textit{\underline{косой}} из песка и гальки. [В. К. Арсеньев, «По Уссурийскому краю», 1917 г.]
-\item Первая черепашка подскочила к гвардейцу и воткнула ему в спину сверкающий \textit{\underline{косой}} меч. [Виктор Пелевин. S.N.U.F.F, 2011]
+\item Поп сам в первой \textit{\underline{косе}} идет, но прихожане не торопятся, смотрят на солнышко и часа через полтора уже намекают, что обедать пора. {\footnotesize[\textit{М. Е. Салтыков-Щедрин. Мелочи жизни (1886-1887)}]}
+\item Но работа даже и после этого идет всё вялее и вялее; некоторые и \textit{\underline{косы}} побросали. {\footnotesize[\textit{М. Е. Салтыков-Щедрин. Мелочи жизни (1886-1887)}]}
+\item В особенности жестоко было крепостное право относительно дворовых людей: даже волосы крепостных девок эксплуатировали, продавая их \textit{\underline{косы}} парикмахерам. {\footnotesize[\textit{М. Е. Салтыков-Щедрин. Мелочи жизни (1886-1887)}]}
+\item Это одинокая скала, соединяющаяся с материком намывной \textit{\underline{косой}} из песка и гальки. {\footnotesize[\textit{В. К. Арсеньев, «По Уссурийскому краю», 1917 г.}]}
+\item Первая черепашка подскочила к гвардейцу и воткнула ему в спину сверкающий \textit{\underline{косой}} меч. {\footnotesize[\textit{Виктор Пелевин. S.N.U.F.F, 2011}]}
 \end{enumerate}
 
 Первые четыре примера дают три разных значения существительного <<коса>>: ряд косарей, сельскохозяйственное орудие, заплетенные волосы, протяжённая речная отмель. Последний пример содержит прилагательное <<косой>>, совпадающее с одной из форм существительного <<коса>>. Все эти значения и часть речи читатель легко определяет по контексту. 
