Добавил Татьяну в авторы

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -889,6 +889,24 @@ An Illustration of the Role of Bias in Machine Learning, Department of Computer 
 \section{СВЕДЕНИЯ ОБ АВТОРE:}
 
 \begin{aboutauthors}
+\authorsname{Каушинис Татьяна Викторовна}
+Студентка\\
+Математический факультет\\ 
+Петрозаводский государственный университет\\
+пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+тел.: +7(8142) 71-10-78\\
+
+\columnbreak
+
+\authorsname{Kaushinis, Tatiana}
+Student\\
+Faculty of Mathematics\\
+Petrozavodsk State University\\
+Prospect Lenina, 33, Petrozavodsk, Republic of Karelia\\
+tel.: +7(8142) 71-10-78\\
+\end{aboutauthors}
+
+\begin{aboutauthors}
 \authorsname{Кириллов Александр Николаевич}
 доктор физико-математических наук\\ 
 доцент\\
