добавил адреса электронной почты

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -1271,6 +1271,7 @@ e-mail: kate.rysh@gmail.com
 Петрозаводский государственный университет\\
 пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
 тел: (8142) 711078\\
+эл. почта: dyankevic@gmail.com
 
 \columnbreak
 
@@ -1278,6 +1279,7 @@ e-mail: kate.rysh@gmail.com
 Petrozavodsk State University\\
 33, Lenin Str., 185910, Petrozavodsk, Republic of Karelia, Russia\\
 tel.: (8142) 711078\\
+e-mail: dyankevic@gmail.com
 \end{aboutauthors}
 
 \end{document}
